--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <!-- HEADER -->
-  <header class="header"></header>
+  <!-- <header class="header"></header> -->
 
   <!-- INTRODUCTION -->
   <main>
@@ -23,16 +23,20 @@
           <p>Managed by a team of professional experts with extensive experience and impressive track records</p>
           <button>Read More</button>
         </div>
-        <img class="intro__illustration" src="./images/illustration-1.png"
+        <div class="intro__illustration">
+          <img src="./images/illustration-1.png"
           alt="an illustration with some devices (laptop, tablet, phone) and a guy">
+        </div>
       </div>
     </section>
 
     <!-- ABOUT -->
     <section class="about">
       <div class="about__container">
-        <img class="about__illustration" src="./images/illustration-2.png"
+        <div class="about__illustration">
+          <img src="./images/illustration-2.png"
           alt="an illustration with a guy working on PC">
+        </div>
         <div class="about__info">
           <h2>Welcome to <span>Dwidasa Samsara Indonesia (DSI)</span></h2>
           <p>Dwidasa Samsara Indonesia (DSI) was firstly established in 2010 by the founders, who each of them has a
